--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,8 +21,8 @@ archives:
       windows: windows
       386: i386
       amd64: x86_64
-    format_overrides:
-      - goos: windows
-        format: zip
+    # format_overrides:
+    #   - goos: windows
+    #     format: zip
 release:
   prerelease: auto
