--- a/deployment/dockerfile/Dockerfile
+++ b/deployment/dockerfile/Dockerfile
@@ -9,6 +9,8 @@ FROM alpine
 
 RUN apk add --no-cache ca-certificates
 COPY --from=builder /go/src/github.com/ddddddO/extxt/extxt /extxt
+# templateのhtmlも必要なため
+COPY --from=builder /go/src/github.com/ddddddO/extxt/server/templates /server/templates
 COPY ./deployment/dockerfile/secret.json /secret.json
 
 ENV GOOGLE_APPLICATION_CREDENTIALS=/secret.json
